fix wake lock issue, fix overflow issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 body, html {
   background-color: rgb(18, 17, 17);
   height: 100%;
-  overflow: visible;
+  overflow: hidden;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -122,7 +122,7 @@ body, html {
   opacity: 1;
 }
 .idle{
-  bottom: -20px !important;
+  bottom: 20px !important;
   opacity: 0;
 }
 button {
